Junction control UI added.

--- a/src/app/content/junction/control/control.component.html
+++ b/src/app/content/junction/control/control.component.html
@@ -1,1 +1,324 @@
-<h1>You are good to go</h1>
+<head><link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css" integrity="sha384-Zug+QiDoJOrZ5t4lssLdxGhVrurbmBWopoEl+M6BdEfwnCJZtKxi1KgxUyJq13dy" crossorigin="anonymous">
+<link rel="stylesheet" type="text/css" href="juncntrl.css">
+</head>
+<body>
+	<div class="container">
+		<div class="radio">
+      		<label><input type="radio" name="optradio">Automatic</label>
+   		</div>
+    	<div class="radio">
+      		<label><input type="radio" name="optradio">Manual</label>
+    	</div>
+    	<div class="row">
+    	<div class="card" style="width: 18rem;">
+  			<div class="row">
+  				<div class="col-md-4">
+  					<div id="file1" class="btn-group-vertical" data-toggle="buttons" >
+  						<div>
+  							<label>
+        						<input type="radio" name="option1"  id="l" />Red
+    						</label>
+    					</div>
+    					<div>
+    						<label>
+        						<input type="radio" name="option1" />Green
+    						</label>
+    					</div>
+    					<div>
+    						<label>
+        						<input type="radio" name="option1" />Yellow
+    						</label>
+    					</div>
+    					<div>
+    						<label>
+        						<input type="radio" name="option1" />Off
+    						</label>
+    					</div>
+   					</div>
+				</div>
+				<div class="col-md-4">
+  					<div id="file2" class="btn-group-vertical" data-toggle="buttons" >
+  						<div>
+  							<label>
+        						<input type="radio" name="option1"  id="l" />Red
+    						</label>
+    					</div>
+    					<div>
+    						<label>
+        						<input type="radio" name="option1" />Green
+    						</label>
+    					</div>
+    					<div>
+    						<label>
+        						<input type="radio" name="option1" />Yellow
+    						</label>
+    					</div>
+    					<div>
+    						<label>
+        						<input type="radio" name="option1" />Off
+    						</label>
+    					</div>
+   					</div>
+				</div>
+				<div class="col-md-4">
+  					<div id="file3" class="btn-group-vertical" data-toggle="buttons" >
+  						<div>
+  							<label>
+        						<input type="radio" name="option1"  id="l" />Red
+    						</label>
+    					</div>
+    					<div>
+    						<label>
+        						<input type="radio" name="option1" />Green
+    						</label>
+    					</div>
+    					<div>
+    						<label>
+        						<input type="radio" name="option1" />Yellow
+    						</label>
+    					</div>
+    					<div>
+    						<label>
+        						<input type="radio" name="option1" />Off
+    						</label>
+    					</div>
+   					</div>
+				</div>
+			</div>
+		</div>
+		<div class="col-md-2"></div>
+		<div class="card" style="width: 18rem;">
+  			<div class="row">
+  				<div class="col-md-4">
+  					<div id="file1" class="btn-group-vertical" data-toggle="buttons" >
+  						<div>
+  							<label>
+        						<input type="radio" name="option1"  id="l" />Red
+    						</label>
+    					</div>
+    					<div>
+    						<label>
+        						<input type="radio" name="option1" />Green
+    						</label>
+    					</div>
+    					<div>
+    						<label>
+        						<input type="radio" name="option1" />Yellow
+    						</label>
+    					</div>
+    					<div>
+    						<label>
+        						<input type="radio" name="option1" />Off
+    						</label>
+    					</div>
+   					</div>
+				</div>
+				<div class="col-md-4">
+  					<div id="file2" class="btn-group-vertical" data-toggle="buttons" >
+  						<div>
+  							<label>
+        						<input type="radio" name="option1"  id="l" />Red
+    						</label>
+    					</div>
+    					<div>
+    						<label>
+        						<input type="radio" name="option1" />Green
+    						</label>
+    					</div>
+    					<div>
+    						<label>
+        						<input type="radio" name="option1" />Yellow
+    						</label>
+    					</div>
+    					<div>
+    						<label>
+        						<input type="radio" name="option1" />Off
+    						</label>
+    					</div>
+   					</div>
+				</div>
+				<div class="col-md-4">
+  					<div id="file3" class="btn-group-vertical" data-toggle="buttons" >
+  						<div>
+  							<label>
+        						<input type="radio" name="option1"  id="l" />Red
+    						</label>
+    					</div>
+    					<div>
+    						<label>
+        						<input type="radio" name="option1" />Green
+    						</label>
+    					</div>
+    					<div>
+    						<label>
+        						<input type="radio" name="option1" />Yellow
+    						</label>
+    					</div>
+    					<div>
+    						<label>
+        						<input type="radio" name="option1" />Off
+    						</label>
+    					</div>
+   					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	<br>
+	<div class="row">
+    	<div class="card" style="width: 18rem;">
+  			<div class="row">
+  				<div class="col-md-4">
+  					<div id="file1" class="btn-group-vertical" data-toggle="buttons" >
+  						<div>
+  							<label>
+        						<input type="radio" name="option1"  id="l" />Red
+    						</label>
+    					</div>
+    					<div>
+    						<label>
+        						<input type="radio" name="option1" />Green
+    						</label>
+    					</div>
+    					<div>
+    						<label>
+        						<input type="radio" name="option1" />Yellow
+    						</label>
+    					</div>
+    					<div>
+    						<label>
+        						<input type="radio" name="option1" />Off
+    						</label>
+    					</div>
+   					</div>
+				</div>
+				<div class="col-md-4">
+  					<div id="file2" class="btn-group-vertical" data-toggle="buttons" >
+  						<div>
+  							<label>
+        						<input type="radio" name="option1"  id="l" />Red
+    						</label>
+    					</div>
+    					<div>
+    						<label>
+        						<input type="radio" name="option1" />Green
+    						</label>
+    					</div>
+    					<div>
+    						<label>
+        						<input type="radio" name="option1" />Yellow
+    						</label>
+    					</div>
+    					<div>
+    						<label>
+        						<input type="radio" name="option1" />Off
+    						</label>
+    					</div>
+   					</div>
+				</div>
+				<div class="col-md-4">
+  					<div id="file3" class="btn-group-vertical" data-toggle="buttons" >
+  						<div>
+  							<label>
+        						<input type="radio" name="option1"  id="l" />Red
+    						</label>
+    					</div>
+    					<div>
+    						<label>
+        						<input type="radio" name="option1" />Green
+    						</label>
+    					</div>
+    					<div>
+    						<label>
+        						<input type="radio" name="option1" />Yellow
+    						</label>
+    					</div>
+    					<div>
+    						<label>
+        						<input type="radio" name="option1" />Off
+    						</label>
+    					</div>
+   					</div>
+				</div>
+			</div>
+		</div>
+		<div class="col-md-2"></div>
+		<div class="card" style="width: 18rem;">
+  			<div class="row">
+  				<div class="col-md-4">
+  					<div id="file1" class="btn-group-vertical" data-toggle="buttons" >
+  						<div>
+  							<label>
+        						<input type="radio" name="option1"  id="l" />Red
+    						</label>
+    					</div>
+    					<div>
+    						<label>
+        						<input type="radio" name="option1" />Green
+    						</label>
+    					</div>
+    					<div>
+    						<label>
+        						<input type="radio" name="option1" />Yellow
+    						</label>
+    					</div>
+    					<div>
+    						<label>
+        						<input type="radio" name="option1" />Off
+    						</label>
+    					</div>
+   					</div>
+				</div>
+				<div class="col-md-4">
+  					<div id="file2" class="btn-group-vertical" data-toggle="buttons" >
+  						<div>
+  							<label>
+        						<input type="radio" name="option1"  id="l" />Red
+    						</label>
+    					</div>
+    					<div>
+    						<label>
+        						<input type="radio" name="option1" />Green
+    						</label>
+    					</div>
+    					<div>
+    						<label>
+        						<input type="radio" name="option1" />Yellow
+    						</label>
+    					</div>
+    					<div>
+    						<label>
+        						<input type="radio" name="option1" />Off
+    						</label>
+    					</div>
+   					</div>
+				</div>
+				<div class="col-md-4">
+  					<div id="file3" class="btn-group-vertical" data-toggle="buttons" >
+  						<div>
+  							<label>
+        						<input type="radio" name="option1"  id="l" />Red
+    						</label>
+    					</div>
+    					<div>
+    						<label>
+        						<input type="radio" name="option1" />Green
+    						</label>
+    					</div>
+    					<div>
+    						<label>
+        						<input type="radio" name="option1" />Yellow
+    						</label>
+    					</div>
+    					<div>
+    						<label>
+        						<input type="radio" name="option1" />Off
+    						</label>
+    					</div>
+   					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
+</body>
