--- a/src/app/content/junction/junction-profile/junction-profile.component.html
+++ b/src/app/content/junction/junction-profile/junction-profile.component.html
@@ -1,3 +1,70 @@
-<p>
-  junction-profile works!
-</p>
+<head>
+  <title>Bootstrap Example</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  <link rel="stylesheet" type="text/css" href="junprofile.css">
+</head>
+<body>
+  <div class="container">
+    <h2>Junction Profile</h2>
+      <form class="form-horizontal" action="">
+        <div class="form-group">
+          <label class="control-label col-sm-2" >Name</label>
+            <div class="col-sm-10">
+              <input type="text" class="form-control" id="name" name="name">
+             </div>
+        </div>
+        <div class="form-group">
+          <label class="control-label col-sm-2" >Description</label>
+            <div class="col-sm-10">
+              <textarea class="form-control" rows="5" id="description"></textarea>
+            </div>
+        </div>
+        <div class="form-group">
+          <label class="control-label col-sm-2">Address</label>
+            <div class="col-sm-10">
+              <input type="text" class="form-control" id="street" placeholder="Street" name="email">
+          </div>
+        </div>
+        <div class="form-group">
+          <label class="control-label col-sm-2"></label>
+            <div class="col-sm-10">
+              <input type="text" class="form-control" id="city" placeholder="City" name="city">
+            </div>
+        </div>
+        <div class="form-group">
+          <label class="control-label col-sm-2"></label>
+            <div class="col-sm-10">
+              <input type="text" class="form-control" id="province" placeholder="Province" name="province">
+            </div>
+        </div>
+        <div class="form-group">
+          <label class="control-label col-sm-2" >Postal Code</label>
+            <div class="col-sm-10">
+              <input type="text" class="form-control" id="postalcode" name="postalcode">
+            </div>
+         </div>
+        <div class="form-group">
+          <label class="control-label col-sm-2" >Latitude</label>
+            <div class="col-sm-10">
+              <input type="text" class="form-control" id="latitude" name="latitude">
+            </div>
+        </div>
+        <div class="form-group">
+          <label class="control-label col-sm-2" >Longitude</label>
+            <div class="col-sm-10">
+              <input type="text" class="form-control" id="longitude" name="longitude">
+            </div>
+        </div>
+        <div class="form-group">
+          <label class="control-label col-sm-2" >Pi Mac</label>
+            <div class="col-sm-10">
+              <input type="text" class="form-control" id="pimac" name="pimac">
+            </div>
+        </div> 
+    </form>
+</div>
+</body>
