--- a/src/app/content/junction/junction-profile/junction-profile.component.css
+++ b/src/app/content/junction/junction-profile/junction-profile.component.css
@@ -1,3 +1,5 @@
-
+.form-horizontal .form-group .control-label {
+	text-align: left;
+}
 
 /*# sourceMappingURL=junction-profile.component.css.map */
