--- a/src/app/components/junction/map/map.component.css
+++ b/src/app/components/junction/map/map.component.css
@@ -1,3 +1,28 @@
+#searchGroup {
+  position: absolute;
+  z-index: 100;
+  margin-top: 12px;
+  margin-left: 12px; }
+  #searchGroup #search {
+    width: 400px;
+    height: 50px;
+    margin: 0;
+    border-radius: 0;
+    border-width: 0;
+    background: url("../../../../assets/img/ic_search_black_48px.svg") no-repeat scroll 7px 7px;
+    padding-left: 30px;
+    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); }
+  #searchGroup #search::-webkit-input-placeholder {
+    color: #c0c0c0 !important; }
+  #searchGroup input:-moz-placeholder {
+    /* Firefox 18- */
+    color: #c0c0c0 !important; }
+  #searchGroup input::-moz-placeholder {
+    /* Firefox 19+ */
+    color: #c0c0c0 !important; }
+  #searchGroup input:-ms-input-placeholder {
+    color: #c0c0c0 !important; }
+
 agm-map {
   height: 100vh; }
 
