--- a/src/app/components/junction/map/map.component.scss
+++ b/src/app/components/junction/map/map.component.scss
@@ -1,3 +1,42 @@
+#searchGroup{
+  position: absolute;
+  z-index:100;
+
+  margin-top: 12px;
+  margin-left: 12px;
+
+  #search{
+    width: 500px;
+    height: 44px;
+
+    margin: 0;
+    border-radius: 0;
+    border-width: 0;
+
+    background: url('../../../../assets/img/search_gray.png') no-repeat scroll 7px 7px;
+    background-size: 30px;
+    background-position-x: 450px;
+    background-color: white;
+    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.13), 0 6px 10px 0 rgba(0, 0, 0, 0.12);
+  }
+
+  #search::-webkit-input-placeholder {
+    color: #c0c0c0 !important;
+  }
+
+  input:-moz-placeholder { /* Firefox 18- */
+    color: #c0c0c0 !important;
+  }
+
+  input::-moz-placeholder {  /* Firefox 19+ */
+    color: #c0c0c0 !important;
+  }
+
+  input:-ms-input-placeholder {
+    color: #c0c0c0 !important;
+  }
+}
+
 agm-map {
   height: 100vh;
 }
