Map markers added.

--- a/src/app/components/junction/map/map.component.html
+++ b/src/app/components/junction/map/map.component.html
@@ -3,5 +3,15 @@
          autocorrect="off" autocapitalize="off" spellcheck="off" type="text">
 </div>
 <agm-map [latitude]="latitude" [longitude]="longitude" [scrollwheel]="true" [zoom]="zoom" [styles]="styles">
-  <agm-marker [latitude]="latitude" [longitude]="longitude"></agm-marker>
+  <!--<agm-marker [latitude]="latitude" [longitude]="longitude"></agm-marker>-->
+  <agm-marker *ngFor="let junction of junctions"
+  [latitude]="junction.latitude"
+  [longitude]="junction.longitude">
+  <agm-info-window class="marker-popup">
+    <h3 class="marker-popup-title">{{junction.name}}</h3>
+    <p class="marker-popup-info">Address : {{junction.street}}, {{junction.city}}</p>
+    <p class="marker-popup-info">Latitude: {{junction.latitude}}</p>
+    <p class="marker-popup-info">Longitude: {{junction.longitude}}</p>
+  </agm-info-window>
+</agm-marker>
 </agm-map>
