--- a/src/app/components/junction/map/map.component.scss
+++ b/src/app/components/junction/map/map.component.scss
@@ -40,3 +40,12 @@
 agm-map {
   height: 100vh;
 }
+
+.marker-popup-title{
+  font-size: 15px;
+  font-weight: 400;
+}
+
+.marker-popup-info{
+  margin: 0;
+}
