--- a/src/app/components/skeleton/sidebar/sidebar.component.html
+++ b/src/app/components/skeleton/sidebar/sidebar.component.html
@@ -19,7 +19,7 @@
     <mat-menu #junctionOverViewSettingsMenu="matMenu" class="sidebar-mat-menu">
       <a class="sidebar-mat-menu-item" (click)="onClickManageJunctions()">Manage Junctions</a>
       <div class="sidebar-mat-menu-divider"></div>
-      <div class="sidebar-mat-menu-section-header">Managed in Smart Traffic System</div>
+      <div class="sidebar-mat-menu-section-header">Managed in Smart Traffic Light System</div>
       <a class="sidebar-mat-menu-item">[Item]</a>
     </mat-menu>
   </div>
