--- a/src/app/components/junction/map/map.component.css
+++ b/src/app/components/junction/map/map.component.css
@@ -4,14 +4,16 @@
   margin-top: 12px;
   margin-left: 12px; }
   #searchGroup #search {
-    width: 400px;
-    height: 50px;
+    width: 500px;
+    height: 44px;
     margin: 0;
     border-radius: 0;
     border-width: 0;
-    background: url("../../../../assets/img/ic_search_black_48px.svg") no-repeat scroll 7px 7px;
-    padding-left: 30px;
-    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); }
+    background: url("../../../../assets/img/search_gray.png") no-repeat scroll 7px 7px;
+    background-size: 30px;
+    background-position-x: 450px;
+    background-color: white;
+    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.13), 0 6px 10px 0 rgba(0, 0, 0, 0.12); }
   #searchGroup #search::-webkit-input-placeholder {
     color: #c0c0c0 !important; }
   #searchGroup input:-moz-placeholder {
@@ -25,5 +27,12 @@
 
 agm-map {
   height: 100vh; }
+
+.marker-popup-title {
+  font-size: 15px;
+  font-weight: 400; }
+
+.marker-popup-info {
+  margin: 0; }
 
 /*# sourceMappingURL=map.component.css.map */
