App was connected with Firebase email authentication.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,1 @@
-<div id="app" class="container-fluid app-container">
-    <span class="sidebar-container">
-      <app-sidebar></app-sidebar>
-    </span>
-    <span class="right-container">
-      <div class="header-container">
-        <app-header></app-header>
-      </div>
-      <div class="content-container">
-        <app-content></app-content>
-      </div>
-    </span>
-</div>
+<router-outlet></router-outlet>
