--- a/src/app/components/junction/map/map.component.scss
+++ b/src/app/components/junction/map/map.component.scss
@@ -13,10 +13,9 @@
     border-radius: 0;
     border-width: 0;
 
-    background: url('../../../../assets/img/search_gray.png') no-repeat scroll 7px 7px;
     background-size: 30px;
     background-position-x: 450px;
-    background-color: white;
+    background: white url('../../../../assets/img/search_gray.png') no-repeat scroll 7px 7px;
     box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.13), 0 6px 10px 0 rgba(0, 0, 0, 0.12);
   }
 
