Feature : Anauthenticated users are rerouted to sign in.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,2 @@
-<router-outlet></router-outlet>
+<router-outlet *ngIf="isAuthenticated(); else sign_in"></router-outlet>
+<ng-template #sign_in></ng-template>
