--- a/src/app/components/skeleton/sign-in/sign-in.component.html
+++ b/src/app/components/skeleton/sign-in/sign-in.component.html
@@ -1,5 +1,4 @@
-{{checkUserInfo()}}
-<div *ngIf="isAuthChecked" style="width: 350px;">
+<div style="width: 350px;">
 
   <p *ngIf="errorMessage.length > 0" class="text-danger">
     {{errorMessage}}</p>
