--- a/src/app/components/skeleton/sidebar/sidebar.component.html
+++ b/src/app/components/skeleton/sidebar/sidebar.component.html
@@ -11,8 +11,7 @@
         <span>Junction Overview</span>
       </div>
     </a>
-    <a class="side-nav-option-button"
-       #junctionOverviewMenuTrigger="matMenuTrigger" [matMenuTriggerFor]="junctionOverViewSettingsMenu">
+    <a class="side-nav-option-button" #junctionOverviewMenuTrigger="matMenuTrigger" [matMenuTriggerFor]="junctionOverViewSettingsMenu">
       <i class="zmdi zmdi-settings"></i>
       <i class="zmdi zmdi-caret-right"></i>
     </a>
