--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -31,9 +31,76 @@
     border: 0;
     background-color: #CFD8DC; }
 
+.mat-menu-panel.header-mat-menu {
+  max-width: 315px; }
+
+.header-mat-menu {
+  display: block;
+  width: 315px;
+  margin-top: 50px;
+  margin-right: 25px;
+  padding: 0; }
+  .header-mat-menu .mat-menu-content {
+    padding: 0; }
+    .header-mat-menu .mat-menu-content .header-mat-menu-top {
+      margin: 20px;
+      display: flex;
+      flex-direction: row; }
+      .header-mat-menu .mat-menu-content .header-mat-menu-top a {
+        margin-right: 20px; }
+        .header-mat-menu .mat-menu-content .header-mat-menu-top a img {
+          display: inline-block;
+          width: auto;
+          max-width: 100%;
+          border-radius: 50%;
+          margin: 0; }
+      .header-mat-menu .mat-menu-content .header-mat-menu-top a:hover {
+        cursor: pointer; }
+      .header-mat-menu .mat-menu-content .header-mat-menu-top .header-mat-menu-top-content {
+        display: inline-block;
+        font-size: 13px; }
+        .header-mat-menu .mat-menu-content .header-mat-menu-top .header-mat-menu-top-content .header-mat-menu-top-content-name {
+          font-weight: 700; }
+        .header-mat-menu .mat-menu-content .header-mat-menu-top .header-mat-menu-top-content .header-mat-menu-top-content-email {
+          font-weight: 400; }
+        .header-mat-menu .mat-menu-content .header-mat-menu-top .header-mat-menu-top-content .header-mat-menu-top-content-link {
+          margin-top: 6px;
+          margin-bottom: 6px;
+          font-weight: 400; }
+          .header-mat-menu .mat-menu-content .header-mat-menu-top .header-mat-menu-top-content .header-mat-menu-top-content-link a {
+            margin-right: 10px;
+            color: #3366cc; }
+          .header-mat-menu .mat-menu-content .header-mat-menu-top .header-mat-menu-top-content .header-mat-menu-top-content-link a:hover {
+            text-decoration: underline;
+            cursor: pointer; }
+          .header-mat-menu .mat-menu-content .header-mat-menu-top .header-mat-menu-top-content .header-mat-menu-top-content-link p {
+            display: inline;
+            margin-right: 10px;
+            color: #c0c0c0; }
+        .header-mat-menu .mat-menu-content .header-mat-menu-top .header-mat-menu-top-content .header-mat-menu-top-content-button {
+          display: inline-block;
+          line-height: 28px;
+          margin-top: 10px;
+          padding-left: 12px;
+          padding-right: 12px;
+          border-radius: 2px;
+          border-width: 1px;
+          font-size: 13px;
+          line-height: 28px;
+          font-weight: 700;
+          background-color: #4d90fe;
+          border-color: #3079ed;
+          color: #ffffff;
+          -webkit-font-smoothing: antialiased; }
+        .header-mat-menu .mat-menu-content .header-mat-menu-top .header-mat-menu-top-content .header-mat-menu-top-content-button:hover {
+          background-color: #357ae8;
+          border-color: #2f5bb7;
+          cursor: pointer; }
+
 html, body {
   height: 100%;
   overflow: hidden;
-  font-family: Roboto; }
+  font-family: Roboto;
+  -webkit-font-smoothing: antialiased; }
 
 /*# sourceMappingURL=app.css.map */
