--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -60,8 +60,10 @@
         display: inline-block;
         font-size: 13px; }
         .header-mat-menu .mat-menu-content .header-mat-menu-top .header-mat-menu-top-content .header-mat-menu-top-content-name {
+          line-height: normal;
           font-weight: 700; }
         .header-mat-menu .mat-menu-content .header-mat-menu-top .header-mat-menu-top-content .header-mat-menu-top-content-email {
+          line-height: normal;
           font-weight: 400; }
         .header-mat-menu .mat-menu-content .header-mat-menu-top .header-mat-menu-top-content .header-mat-menu-top-content-link {
           margin-top: 6px;
@@ -90,12 +92,36 @@
           font-weight: 700;
           background-color: #4d90fe;
           border-color: #3079ed;
-          color: #ffffff;
-          -webkit-font-smoothing: antialiased; }
+          color: #ffffff; }
         .header-mat-menu .mat-menu-content .header-mat-menu-top .header-mat-menu-top-content .header-mat-menu-top-content-button:hover {
           background-color: #357ae8;
           border-color: #2f5bb7;
           cursor: pointer; }
+    .header-mat-menu .mat-menu-content .header-mat-menu-bottom {
+      border-top: 1px solid;
+      background-size: 100%;
+      border-color: rgba(0, 0, 0, 0.2);
+      background-color: #f5f5f5; }
+      .header-mat-menu .mat-menu-content .header-mat-menu-bottom div {
+        height: 50px;
+        padding-top: 10px;
+        padding-bottom: 10px;
+        text-align: right; }
+        .header-mat-menu .mat-menu-content .header-mat-menu-bottom div a {
+          display: inline-block;
+          line-height: 28px;
+          border-radius: 2px;
+          margin-right: 20px;
+          padding-left: 12px;
+          padding-right: 12px;
+          font-size: 13px;
+          font-weight: 400;
+          border: 1px solid #c6c6c6;
+          background-color: #f8f8f8;
+          color: #666;
+          cursor: default; }
+        .header-mat-menu .mat-menu-content .header-mat-menu-bottom div a:hover {
+          background-color: #fdfdfd; }
 
 html, body {
   height: 100%;
