--- a/src/assets/css/partials/_header.scss
+++ b/src/assets/css/partials/_header.scss
@@ -11,19 +11,19 @@
   margin-right: 25px;
   padding: 0;
 
-  .mat-menu-content{
+  .mat-menu-content {
     padding: 0;
 
-    .header-mat-menu-top{
+    .header-mat-menu-top {
       margin: 20px;
 
       display: flex;
       flex-direction: row;
 
-      a{
+      a {
         margin-right: 20px;
 
-        img{
+        img {
           display: inline-block;
           width: auto;
           max-width: 100%;
@@ -33,41 +33,45 @@
         }
       }
 
-      a:hover{
+      a:hover {
         cursor: pointer;
       }
 
-      .header-mat-menu-top-content{
+      .header-mat-menu-top-content {
         display: inline-block;
 
         font-size: 13px;
 
-        .header-mat-menu-top-content-name{
+        .header-mat-menu-top-content-name {
+          line-height: normal;
+
           font-weight: 700;
         }
 
-        .header-mat-menu-top-content-email{
+        .header-mat-menu-top-content-email {
+          line-height: normal;
+
           font-weight: 400;
         }
 
-        .header-mat-menu-top-content-link{
+        .header-mat-menu-top-content-link {
           margin-top: 6px;
           margin-bottom: 6px;
 
           font-weight: 400;
 
-          a{
+          a {
             margin-right: 10px;
 
             color: #3366cc;
           }
 
-          a:hover{
+          a:hover {
             text-decoration: underline;
             cursor: pointer;
           }
 
-          p{
+          p {
             display: inline;
 
             margin-right: 10px;
@@ -76,7 +80,7 @@
           }
         }
 
-        .header-mat-menu-top-content-button{
+        .header-mat-menu-top-content-button {
           display: inline-block;
           line-height: 28px;
 
@@ -93,11 +97,9 @@
           background-color: rgb(77, 144, 254);
           border-color: rgb(48, 121, 237);
           color: #ffffff;
-
-          -webkit-font-smoothing: antialiased;
         }
 
-        .header-mat-menu-top-content-button:hover{
+        .header-mat-menu-top-content-button:hover {
           background-color: rgb(53, 122, 232);
           border-color: rgb(47, 91, 183);
 
@@ -106,8 +108,45 @@
       }
     }
 
-    .header-mat-menu-bottom{
+    .header-mat-menu-bottom {
+      border-top: 1px solid;
 
+      background-size: 100%;
+
+      border-color: rgba(0, 0, 0, 0.2);
+      background-color: #f5f5f5;
+
+      div {
+        height: 50px;
+
+        padding-top: 10px;
+        padding-bottom: 10px;
+
+        text-align: right;
+
+        a {
+          display: inline-block;
+          line-height: 28px;
+
+          border-radius: 2px;
+          margin-right: 20px;
+          padding-left: 12px;
+          padding-right: 12px;
+
+          font-size: 13px;
+          font-weight: 400;
+          border: 1px solid rgb(198, 198, 198);
+
+          background-color: rgb(248, 248, 248);
+          color: #666;
+
+          cursor: default;
+        }
+
+        a:hover {
+          background-color: #fdfdfd;
+        }
+      }
     }
   }
 }
