--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,1 @@
-<router-outlet *ngIf="isAuthenticated()"></router-outlet>
-<app-sign-in *ngIf="!isAuthenticated()"></app-sign-in>
+<ng-template #dynamicContent></ng-template>
