--- a/src/app/components/skeleton/sign-in/sign-in.component.css
+++ b/src/app/components/skeleton/sign-in/sign-in.component.css
@@ -1,3 +1,9 @@
-
+.fluid-container {
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center; }
+  .fluid-container .sign-in-form {
+    width: 400px; }
 
 /*# sourceMappingURL=sign-in.component.css.map */
