--- a/src/app/components/skeleton/sign-in/sign-in.component.html
+++ b/src/app/components/skeleton/sign-in/sign-in.component.html
@@ -1,22 +1,23 @@
-<div style="width: 350px;">
+<div class="fluid-container">
+  <div class="sign-in-form">
+    <p *ngIf="errorMessage.length > 0" class="text-danger">
+      {{errorMessage}}</p>
 
-  <p *ngIf="errorMessage.length > 0" class="text-danger">
-    {{errorMessage}}</p>
+    <p *ngIf="error.message.length > 0" class="text-danger">
+      {{error.message}}</p>
 
-  <p *ngIf="error.message.length > 0" class="text-danger">
-    {{error.message}}</p>
+    <form (ngSubmit)="onSignInEmail()">
+      <div class="form-group">
+        <label for="email">Email</label>
+        <input type="text" class="form-control" id="email" name="email" required [(ngModel)]="email">
+      </div>
 
-  <form (ngSubmit)="onSignInEmail()">
-    <div class="form-group">
-      <label for="email">Email</label>
-      <input type="text" class="form-control" id="email" name="email" required [(ngModel)]="email">
-    </div>
+      <div class="form-group">
+        <label for="password">Password</label>
+        <input type="password" class="form-control" id="password" name="password" required [(ngModel)]="password">
+      </div>
 
-    <div class="form-group">
-      <label for="password">Password</label>
-      <input type="password" class="form-control" id="password" name="password" required [(ngModel)]="password">
-    </div>
-
-    <button type="submit" class="btn btn-success">Log In</button>
-  </form>
+      <button type="submit" class="btn btn-success">Log In</button>
+    </form>
+  </div>
 </div>
