--- a/src/app/components/junction/map/map.component.css
+++ b/src/app/components/junction/map/map.component.css
@@ -9,9 +9,10 @@
     margin: 0;
     border-radius: 0;
     border-width: 0;
-    background-size: 30px;
-    background-position-x: 450px;
     background: white url("../../../../assets/img/search_gray.png") no-repeat scroll 7px 7px;
+    background-size: 25px;
+    background-position-x: 450px;
+    background-position-y: 50%;
     box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.13), 0 6px 10px 0 rgba(0, 0, 0, 0.12); }
   #searchGroup #search::-webkit-input-placeholder {
     color: #c0c0c0 !important; }
