Header title functions added.

--- a/src/app/components/skeleton/header/header.component.html
+++ b/src/app/components/skeleton/header/header.component.html
@@ -1,4 +1,7 @@
 <div class="main-header">
+  <div>
+    <span class="header-title">{{selectedJunction}}</span>
+  </div>
   <div class="space-flex"></div>
   <div>
     <i class="zmdi zmdi-notifications zmdi-hc-fw"></i>
