--- a/src/app/components/skeleton/header/header.component.css
+++ b/src/app/components/skeleton/header/header.component.css
@@ -7,6 +7,13 @@
   background-color: #1b9ce2;
   display: flex;
   align-items: center; }
+  .main-header .header-title {
+    margin-left: 20px;
+    font-size: 14px;
+    font-weight: 500;
+    color: white !important; }
+  .main-header .header-title:hover {
+    cursor: default; }
   .main-header .space-flex {
     display: block;
     flex-grow: 1;
